@@ -60,6 +60,7 @@
 <div><ul class="simple">
 <li>Multiple Image widgets can reuse the same image file for efficiency (thanks to andrew-101)</li>
 <li>ListBox widget</li>
+<li>Image.texco is now exposed allowing for UV coordinates to be changed (thanks to jplur)</li>
 </ul>
 </div></blockquote>
 </div>
